# ehm2019

./: CMakeLists.txt  LICENSE  README.md
include/Database/: City.hpp  Continent.hpp  DLL.hpp  Date.hpp  Nation.hpp  Object.hpp  ObjectManager.hpp  Person.hpp  Region.hpp
include/Serialization/: BinaryReader.hpp  BinaryWriter.hpp  DLL.hpp  Endianness.hpp  Serializable.hpp
src/: CMakeLists.txt
src/Database/: CMakeLists.txt  City.cpp  Continent.cpp  Date.cpp  Nation.cpp  Object.cpp  ObjectManager.cpp  Person.cpp  Region.cpp
src/Serialization/: BinaryReader.cpp  BinaryWriter.cpp  CMakeLists.txt  Serializable.cpp
tests/: CMakeLists.txt
tests/SerializationTest/: CMakeLists.txt  main.cpp
